# anime-service

./: .dockerignore  .gitattributes  .gitignore  CI.Dockerfile  Cargo.toml  Dockerfile  Rocket.toml  sqlx-data.json
.fleet/: run.json
.github/workflows/: ci.yml  docker-image.yml
.sqlx/: query-0ef0a4c9986c58fff94ded25679a2cba14921b2befb7b546fd44ea820ac827b0.json  query-10dd73ef63f0515e18db94e924bbf298bee0a454b2ab252e5bc088625c105f89.json  query-36874de3a525cc9fbe0e4da900d2a3b2c83d00528d55ef277b4c351bd1a55421.json  query-3e1709f0695b18f0948c4d1fefd34c2dd24a31c4784e1add75f18c5ebc79ebc4.json  query-3f9c4a14f3c7a58fd68f1c99cc1d30791249ba4210b9789d05044c850b27230a.json  query-47bd2d872c0a0c4e7d975f8f9e10472d83a9e3edc5557b7a798228e90a8742e2.json  query-4996e2f1e38ae696866b081e4f3d424aa0f90afd74a897d32d35ea07aba8eb81.json  query-4d6b4ed5a0466ebfed54134f1a1d6b797c03af68ab2f1b4e18430ef1d1f1348e.json  query-510ec368b4679a8416ba7091f788b78dc5b3766b4855737cc66ceb7782daa46e.json  query-565ebbb243162e073f596a249f3ee6fa0eddded0f11d67a4db5df4c8d56b2b98.json  query-6988c43e55a70f3c6bf7a73eb21224fd2fcef301d0d6e76c514b5940cfcfdc09.json  query-7c28dac52a5e0b809cd8401c064c03885e1192824e04282a446a84f5dd3d170c.json  query-80097bd3a7d71331e48e804a08163ca57d2167086d82805249d72419c34a0324.json  query-80c8c66c0f195dd5c87e26f5f3bf879b0d8abc8bed7bc396dd416bc23e8fb4ce.json  query-82e8429d1eb675f1e3a78619ad9c946a06aed3ec4aa8d08e415ab5aa939d7713.json  query-979077ac2045caf137e25c19223b501aa2d7fcdc8ac8c98202f4195f36054e4e.json  query-9d3f044a70d964da2cece001c5e363d349086aa5d83c6319c58b350781743f86.json  query-a0c588feef80ac8e3523985d0203e8d34c349eaaf4f735dc5b750e5b6eb16882.json  query-a71c44453ffcdd2cdc83d35198da388626c9d17b33cb0aed95855141ede1abbf.json  query-c1ab24d522271baacf2ce2cb0efb86777ff816d6a33861cfa80f1ac2745e101b.json  query-c2d0e70939c36c450acaaf076f932b383c900037a49a6d3a184d3bb03fabee40.json  query-c873d8f286d78b7c34c53d38780859e2b50565d9ae8f83d8586254d40e121e47.json  query-cc3d550f2941462cab3aed632789689ef8f24027a4e586cf1276f6b787a55c4a.json  query-d29c1903ac9ec9b74297d2552e53525f6c274a6cd0dd28ef9d5fad7c10bc59e1.json  query-d4e7b1bbb0ca01ba8394a7c648e7d2bb988d60cbc5f33e3118755f808cc908bf.json  query-e01ad738680138550ce7503a68b9029afb2f6fb851d9eed1426503ff5814ba23.json  query-ecfe5e6023e1580e26dfd711e71bbafb3919909c0edaff9bb0c2cb209074a61d.json  query-eedb200d54cdfa888411b20e654b4f75a0740a9939320ad65185e8303f17bb28.json
consume-api/src/api/: error.rs  params.rs
consume_api/: Cargo.toml
consume_api/src/: api.rs  lib.rs
consume_api/src/api/: client.rs  endpoint.rs  endpoint_prelude.rs  params.rs  query.rs
kitsu/: Cargo.toml
kitsu/src/: lib.rs  models.rs  params.rs
migrations/: 20221214230923_episode.sql  20221216164658_unique_constraint.sql  20230212173453_add_episode_updated_at.sql  20230220231911_add_extra_episode_field.sql  20231215132821_add_download_variants.sql  20231215133716_change_resolution_to_a_number.sql  20231217144823_update_at_index.sql  20231217152245_comments_are_not_null.sql  20231223205312_add_download_variants.sql  20231223224726_rename_episode_download_to_download.sql  20231223232259_variant_index.sql  20231223232541_variant_indexex.sql
nyaa/: Cargo.toml
nyaa/src/: lib.rs  parsers.rs
nyaa/src/parsers/: subs_please.rs
proto/: Cargo.toml  build.rs
proto/protos/: api.proto  api.v1.proto  api.v2.proto
proto/src/: lib.rs
queries/: insert_download_resolution.sql  insert_episode_download.sql  insert_episode_download_resolution.sql  query_download_resolution_by_ids.sql  query_downloads_by_title.sql  query_episode_download_by_unique.sql  query_last_updated_at.sql  update_download_updated_at.sql  update_episode_download_updated_at.sql
queries/batch/: insert_batch_download.sql  insert_batch_download_resolution.sql  query_batch_download_by_unique.sql  update_batch_download_updated_at.sql
queries/episode/: insert_episode_download.sql  query_episode_download_by_unique.sql  update_episode_download_updated_at.sql
queries/movie/: insert_movie_download.sql  insert_movie_download_resolution.sql  query_movie_download_by_unique.sql  update_movie_download_updated_at.sql
src/: controllers.rs  datasource.rs  errors.rs  jobs.rs  lib.rs  main.rs  models.rs  request_cache.rs  sql_models.rs  state.rs
src/controllers/: anime.rs  downloads.rs  grpc.rs  rest.rs
src/datasource/: repository.rs
src/datasource/repository/: batch.rs  download.rs  download_resolution.rs  download_resolutions.rs  downloads.rs  episode.rs  groups.rs  movie.rs
src/datasource/repository/download/: batch.rs  episode.rs  movie.rs
src/datasource/repository/downloads/: batch.rs  episode.rs  movie.rs
src/jobs/: poll.rs  poller.rs
tmdb/: Cargo.toml
tmdb/src/: lib.rs  year.rs
