[package]
name = "anime-service"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["kitsu", "nyaa", "proto"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitsu = { path = "kitsu" }
nyaa = { path = "nyaa" }
proto = { path = "proto" }

ahash = "0.8.6"
anyhow = "1"
async-stream = "0.3.5"
axum = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4.2"
futures = "0.3.30"
itertools = "0.12"
percent-encoding = "2.2.0"
prost-types= "0.12.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tokio-util = "0.7.8"
tonic = { version = "0.10.2", features = ["gzip"] }
tower = { version = "0.4", features = ["steer"] }
tower-http = { version = "0.4", features = ["trace", "decompression-full", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
