[package]
name = "anime-service"
version = "0.2.8"
edition = "2021"

[workspace]
members = ["kitsu", "nyaa", "proto"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitsu = { path = "kitsu" }
nyaa = { path = "nyaa" }
proto = { path = "proto" }

ahash = "0.8.11"
anyhow = "1"
async-stream = "0.3.5"
axum = { version = "0.8.0" }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4.2"
futures = "0.3.29"
prost-types = "0.13.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tonic = { version = "0.13.0", git = "https://github.com/hyperium/tonic", features = ["gzip"] }
tower = { version = "0.5", features = ["steer", "make"] }
tower-http = { version = "0.6.0", features = ["trace", "decompression-full", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
