[package]
name = "consume_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
http = "0.2"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
url = "2"

hyper = { version = "0.14", features = ["client"], optional = true }
hyper-rustls = {version = "0.23", optional = true }
reqwest = { version = "0.11", optional = true }

[features]
default = ["hyper-tls"]
reqwest = ["dep:reqwest"]
hyper = ["dep:hyper"]
hyper-tls = ["hyper", "dep:hyper-rustls"]
