[package]
name = "nyaa"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "brotli"] }
regex = "1"
rss = "2"
thiserror = "1"
url = "2"