[package]
name = "nyaa"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "brotli"] }
rss = "2"
thiserror = "1"
tracing = "0.1"
url = "2"
winnow = "0.5.33"