[package]
name = "proto"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.13.0", git = "https://github.com/hyperium/tonic", default-features = false, features = ["codegen"] }
prost = "0.14.0"
prost-types = "0.14.0"

[build-dependencies]
tonic-build = { version = "0.13.0", git = "https://github.com/hyperium/tonic" }
