[package]
name = "tmdb"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
url = { version = "2", features = ["serde"] }

[lints]
workspace = true